[package]
name = "dorker"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
colorize = "0.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
ureq = { version = "3.1.4", features = ["json"] }
urlencoding = "2.1.3"
